testdata/baselines/reference/submodule/conformance/nodeModulesAllowJsExportAssignment(module=node20).errors.txt
file.js(4,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
file.js(4,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.
index.js(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.
subfolder/file.js(3,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.
subfolder/index.js(3,1): error TS8003: 'export =' can only be used in TypeScript files.


==== subfolder/index.js (1 errors) ====
    // cjs format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== subfolder/file.js (1 errors) ====
    // cjs format file
    const a = {};
    module.exports = a;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== index.js (2 errors) ====
    // esm format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.
==== file.js (2 errors) ====
    // esm format file
    import "fs";
    const a = {};
    module.exports = a;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }